--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,12 +33,16 @@ nav ul a{
     margin: 15px;
 }
 
-#upvote {
+#like {
     margin: 0px 5px 0px;
 }
 
-#downvote {
+#dislike {
     margin: 0px 5px 0px;
+}
+
+.social-links i {
+    font-size: 30px;
 }
 
 /*-----MEDIA QUERIES-----*/
