--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
         <!--Main navbar-->
             <div class="navbar-fixed">
                 <nav>
-                    <div class="nav-wrapper white lighten-2">
-                        <a href="{{ url_for('get_jokes') }}" class="brand-logo center grey-text">Laugh Out Loud!</a>
+                    <div class="col s12 nav-wrapper white lighten-2">
+                        <a href="{{ url_for('get_jokes') }}" class="brand-logo center grey-text" id="hero-text">Laugh Out Loud!</a>
                         <a href="#" data-target="mobile-demo" class="sidenav-trigger right grey-text "><i class="fas fa-bars"></i></a>
                         <ul class="right hide-on-med-and-down">
                             <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
@@ -80,9 +80,9 @@
     </main>
 </body>
   <!-- Footer -->
-  <footer class="white grey-text z-depth-2">
+  <footer class="col s12 white grey-text z-depth-2">
     <div class="row center-align text-shadow-2">
-        <div class="col s12 l12 center-align social-links">
+        <div class="col s12 center-align social-links">
             <a target="_blank" rel="noopener" href="https://en-gb.facebook.com/">
                 <i class="fab fa-facebook" aria-hidden="true"></i>
                 <span class="sr-only">Facebook</span></a>
