--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -2,18 +2,18 @@
 {% block content %}
 
     
-        <div class="row card-panel grey lighten-5">
+        <div class="row card-panel orange lighten-4">
             <form action="{{ url_for('search') }}" method="POST" class="col s12">
                 <div class="row valign-wrapper center-align">
                     <div class="input-field col s12 m12">
-                        <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                        <i class="fas fa-search prefix light-blue-text text-darken-4" id="fa-search"></i>
                         <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                        <label for="query">Search Jokes</label>
+                        <label for="query" id="searchbox">Search Jokes</label>
                     </div>
-                    <div class="col s4 m12">
+                    <div class="col s12">
                         <a href="{{ url_for('get_jokes') }}" class="red btn-small text-shadow">Reset</a>
                         <button type="submit" class="yellow darken-3 btn-small text-shadow">
-                            <i class="fas fa-search left"></i> Search
+                            Search
                         </button>
                     </div>
                 </div>
@@ -24,32 +24,56 @@
         </div>  
         <div class="row section">
             <!--joke category panel-->
-            <div class="col s3 m3">
+            <div class="col s12 m6 offset-m3 l3">
                 <div class="collection z-depth-1">
-                    <a href="{{ url_for('get_jokes') }}" class="collection-item grey-text text-darken-2">Home - Joke Bank</a>
-                    <a href="{{ url_for('family_jokes') }}" class="collection-item grey-text text-darken-2">Family Jokes</a>
-                    <a href="{{ url_for('food_jokes') }}" class="collection-item grey-text text-darken-2">Food Jokes</a>
-                    <a href="{{ url_for('insult_jokes') }}" class="collection-item grey-text text-darken-2">Insult Jokes</a>
-                    <a href="{{ url_for('relationship_jokes') }}" class="collection-item grey-text text-darken-2">Relationship Jokes</a>
-                    <a href="{{ url_for('word_jokes') }}" class="collection-item grey-text text-darken-2">Word Play Jokes</a>
-                    <a href="{{ url_for('yo_jokes') }}" class="collection-item grey-text text-darken-2">Yo Momma Jokes</a>
+                    <a href="{{ url_for('get_jokes') }}" class="collection-item orange lighten-5 grey-text text-darken-2">Home - Joke Bank</a>
+                    <a href="{{ url_for('family_jokes') }}" class="collection-item orange lighten-5 grey-text text-darken-2">Family Jokes</a>
+                    <a href="{{ url_for('food_jokes') }}" class="collection-item orange lighten-5 grey-text text-darken-2">Food Jokes</a>
+                    <a href="{{ url_for('insult_jokes') }}" class="collection-item orange lighten-5 grey-text text-darken-2">Insult Jokes</a>
+                    <a href="{{ url_for('relationship_jokes') }}" class="collection-item orange lighten-5 grey-text text-darken-2">Relationship Jokes</a>
+                    <a href="{{ url_for('word_jokes') }}" class="collection-item orange lighten-5 grey-text text-darken-2">Word Play Jokes</a>
+                    <a href="{{ url_for('yo_jokes') }}" class="collection-item orange lighten-5 grey-text text-darken-2">Yo Momma Jokes</a>
                 </div>
             </div>
         {% if jokes|length > 0 %}
-            <div class="col s9 m9">
+            <div class="col s12 l9">
             {% for joke in jokes %}
-                <div class="card">
+                <div class="card-panel orange lighten-5">
                     <div class="card-content">
                         <p class="">{{ joke.joke_description }}</p><br>
                         <p class="">by: {{ joke.created_by }}</p><br>
                     </div>
                     <div class="row">
-                        <div class="col s8 valign-wrapper">
+                        <div class="col s6 m7 l7 valign-wrapper">
+                    {% if session.user %}
+                        {% if joke._id in users_bookmark %}
+                            <a href="{{ url_for('remove_bookmark', joke_id=joke._id)}}" class="btn tooltipped btn-small teal lighten-1 white-text bold" 
+                                data-position="top" data-tooltip="Click to Un-bookmark!" id="remove_bookmark">Added</a>
+                        {% else %}
+                            <a href="{{ url_for('add_bookmark', joke_id=joke._id)}}" class="btn tooltipped btn-small teal lighten-1 white-text bold" 
+                                data-position="top" data-tooltip="Click to Bookmark!" id="add_bookmark">Bookmark</a>
+                        {% endif %}
+                    {% endif %}
+                        <div class="col s6 l6 valign-wrapper face-icons">
+                            <a href="{{ url_for('like', joke_id=joke._id)}}" class="secondary content like tooltipped" 
+                                data-position="top" data-tooltip="Click to Like!">
+                                <img src="/static/images/joyful-face.png" id="laughing-face" alt="laughing-face"></a>
+                                <span class="black-text bold like" id="counter">{{ joke.like }}</span>
+                            <a href="{{ url_for('dislike', joke_id=joke._id)}}" class="secondary content dislike tooltipped" 
+                                data-position="top" data-tooltip="Click to Disike!">
+                                <img src="/static/images/frowning-face.png" id="frowning-face" alt="frowning-face"></a>
+                            <span class="black-text bold dislike" id="counter">{{ joke.dislike }}</span>
+                        </div> 
+                        </div>
+                        <div class="col s12 m5 l4">
                     {% if session.user|lower == joke.created_by|lower %}
+                            <div class="col s6 l5">
                             <a href="{{ url_for('edit_joke', joke_id=joke._id)}}" class="btn-small green darken-2">Edit</a>
+                            </div>
                         <!-- Modal Trigger -->
+                            <div class="col s6 l6">
                             <a class="btn-small red modal-trigger" href="#modal1">Delete</a>
-                        
+                            </div>
                         <!-- Modal Structure -->
                         <div id="modal1" class="modal">
                             <div class="modal-content">
@@ -63,26 +87,8 @@
                             </div>
                         </div>
                     {% endif %}
-                    {% if session.user %}
-                        {% if joke._id in users_bookmark %}
-                            <a href="{{ url_for('remove_bookmark', joke_id=joke._id)}}" class="btn tooltipped btn-small teal lighten-1 white-text bold" 
-                                data-position="top" data-tooltip="Click to Un-bookmark!" id="remove_bookmark">Added</a>
-                        {% else %}
-                            <a href="{{ url_for('add_bookmark', joke_id=joke._id)}}" class="btn tooltipped btn-small teal lighten-1 white-text bold" 
-                                data-position="top" data-tooltip="Click to Bookmark!" id="add_bookmark">Bookmark</a>
-                        {% endif %}
-                    {% endif %}
                         </div>
-                        <div class="col s4 valign-wrapper face-icons">
-                            <a href="{{ url_for('like', joke_id=joke._id)}}" class="secondary content like tooltipped" 
-                                data-position="top" data-tooltip="Click to Like!">
-                                <img src="/static/images/joyful-face.png" id="laughing-face" alt="laughing-face"></a>
-                                <span class="black-text bold like">{{ joke.like }}</span>
-                            <a href="{{ url_for('dislike', joke_id=joke._id)}}" class="secondary content dislike tooltipped" 
-                                data-position="top" data-tooltip="Click to Disike!">
-                                <img src="/static/images/frowning-face.png" id="frowning-face" alt="frowning-face"></a>
-                            <span class="black-text bold dislike">{{ joke.dislike }}</span>
-                        </div> 
+                        
                     </div>   
                 </div>
             {% endfor %} 
