--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <!--Main navbar-->
             <div class="navbar-fixed">
                 <nav>
-                    <div class="col s12 nav-wrapper white lighten-2">
+                    <div class="col s10 offsets-2 nav-wrapper white lighten-2">
                         <a href="{{ url_for('get_jokes') }}" class="brand-logo center grey-text" id="hero-text">Laugh Out Loud!</a>
                         <a href="#" data-target="mobile-demo" class="sidenav-trigger right grey-text "><i class="fas fa-bars"></i></a>
                         <ul class="right hide-on-med-and-down">
@@ -96,8 +96,8 @@
                 <i class="fab fa-youtube" aria-hidden="true"></i>
                 <span class="sr-only">YouTube</span></a>
         </div>
-        <div class="col s12 copyright text-grey center"><strong>Site is for educational purposes only &copy; Karen Yuen </strong><span id="copyright"></span></div>
     </div>
+    <div class="col s12 copyright text-grey center"><strong> &copy; Karen Yuen </strong><span id="copyright"></span></div>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" 
