Updated collection bookmark page with new code and Materialize CSS from homepage

--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -96,7 +96,9 @@
             {% endfor %} 
             </div>
         {% else %}
-            <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
+            <div class="s6" id="no-results">
+                <h3 class="red-text text-darken-4 center-align" >No Results Found</h3>
+            </div>
         {% endif %}
         </div>
     
