--- a/templates/coll_bookmarks.html
+++ b/templates/coll_bookmarks.html
@@ -2,56 +2,52 @@
 {% block content %}
 
 
-    <div class="row">
-        <div class="col s6 s6 offset-s3">
-            <div class="card-panel">
-                <h3 class="center-align grey-text yellow-darken-3">
-                    {{ username }}'s Collection
-                </h3>
-            </div>
-        </div>
-    </div>
     <!--Search-->
-    <div class="row card-panel grey lighten-5">
+    <div class="row card-panel amber lighten-5">
         <form action="{{ url_for('search') }}" method="POST" class="col s12">
             <div class="row valign-wrapper center-align">
-                <div class="input-field col s12 m8">
-                    <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                <div class="input-field col s12 m12">
+                    <i class="fas fa-search prefix light-blue-text text-darken-4" id="fa-search"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                    <label for="query">Search Jokes</label>
+                    <label for="query" id="searchbox">Search Jokes</label>
                 </div>
-                <div class="col s12 m4">
-                    <a href="{{ url_for('get_jokes') }}" class="red btn text-shadow">Reset</a>
-                    <button type="submit" class="yellow darken-1 btn text-shadow">
-                        <i class="fas fa-search left"></i> Search
+                <div class="col s12">
+                    <a href="{{ url_for('get_jokes') }}" class="red btn text-shadow">
+                        Reset
+                    </a>
+                    <button type="submit" class="yellow darken-3 btn text-shadow">
+                        Search
                     </button>
                 </div>
             </div>
         </form>
-    </div>
+    </div>  
+    <div class="s9 grey-text text-darken-2 center-align">
+            <h3>{{ username }}'s Collection</h3>
+        </div> 
     <div class="row section">
-        <!--joke category panel-->
-        <div class="col s3">
-            <div class="collection z-depth-1">
-                <a href="{{ url_for('get_jokes') }}" class="collection-item grey-text text-darken-2">Home - Joke Bank</a>
-                <a href="{{ url_for('family_jokes') }}" class="collection-item grey-text text-darken-2">Family Jokes</a>
-                <a href="{{ url_for('food_jokes') }}" class="collection-item grey-text text-darken-2">Food Jokes</a>
-                <a href="{{ url_for('insult_jokes') }}" class="collection-item grey-text text-darken-2">Insult Jokes</a>
-                <a href="{{ url_for('relationship_jokes') }}" class="collection-item grey-text text-darken-2">Relationship Jokes</a>
-                <a href="{{ url_for('word_jokes') }}" class="collection-item grey-text text-darken-2">Word Play Jokes</a>
-                <a href="{{ url_for('yo_jokes') }}" class="collection-item grey-text text-darken-2">Yo Momma Jokes</a>
+        <!--Joke category panel-->
+        <div class="col s12 m6 offset-m3 l3">
+                <div class="collection z-depth-1">
+                    <a href="{{ url_for('get_jokes') }}" class="collection-item amber lighten-5 grey-text text-darken-2">Home - Joke Bank</a>
+                    <a href="{{ url_for('family_jokes') }}" class="collection-item amber lighten-5 grey-text text-darken-2">Family Jokes</a>
+                    <a href="{{ url_for('food_jokes') }}" class="collection-item amber lighten-5 grey-text text-darken-2">Food Jokes</a>
+                    <a href="{{ url_for('insult_jokes') }}" class="collection-item amber lighten-5 grey-text text-darken-2">Insult Jokes</a>
+                    <a href="{{ url_for('relationship_jokes') }}" class="collection-item amber lighten-5 grey-text text-darken-2">Relationship Jokes</a>
+                    <a href="{{ url_for('word_jokes') }}" class="collection-item amber lighten-5 grey-text text-darken-2">Word Play Jokes</a>
+                    <a href="{{ url_for('yo_jokes') }}" class="collection-item amber lighten-5 grey-text text-darken-2">Yo Momma Jokes</a>
+                </div>
             </div>
-        </div>
-        <div class="col s9">
+        <div class="col s12 l9">
         {% for bookmark_joke in bookmark_jokes %}   
-            <div class="card">
+            <div class="card-panel amber lighten-5">
                 <div class="card-content">
                     <p class="">{{ bookmark_joke.joke_description }}</p><br>
                     <p class="">by: {{ bookmark_joke.created_by }}</p><br>
                 </div> 
                 <div class="row">
-                    <div class="col s9">
-                <!--{% if session.user|lower == joke.created_by|lower %}
+                    <div class="col s8 offset-s2 m4 valign-wrapper" id="bookmarks">
+            <!--    {% if session.user|lower == joke.created_by|lower %}
                         <a href="{{ url_for('edit_joke', joke_id=joke._id)}}" class="btn-small green darken-2">Edit</a>
                     <!-- Modal Trigger -->
                     <!--    <a class="btn-small red modal-trigger" href="#modal1">Delete</a>
@@ -70,14 +66,12 @@
                         </div>
                 {% endif %}-->  
                         {% if joke._id in users_bookmark %}
-                            <a href="{{ url_for('remove_bookmark', joke_id=joke._id)}}" class="btn btn-small teal lighten-1 white-text bold" id="remove_bookmark">Added</a>
+                            <a href="{{ url_for('remove_bookmark', joke_id=joke._id)}}" class="btn tooltipped btn-small teal lighten-1 white-text bold" 
+                                data-position="top" data-tooltip="Click to Un-bookmark!" id="remove_bookmark">Added</a>
                         {% else %}
-                            <a href="{{ url_for('add_bookmark', joke_id=joke._id)}}" class="btn btn-small teal lighten-1 white-text bold" id="add_bookmark">Bookmark</a>
+                            <a href="{{ url_for('add_bookmark', joke_id=joke._id)}}" class="btn tooltipped btn-small teal lighten-1 white-text bold" 
+                                data-position="top" data-tooltip="Click to Bookmark!" id="add_bookmark">Bookmark</a>
                         {% endif %}
-                    </div>
-                    <div class="col s3">
-                        <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_satisfied</i></a>
-                        <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_dissatisfied</i></a>
                     </div>
                 </div>  
             </div>
