Updated all the category templates with homepage Materialize CSS and responsive code

--- a/templates/add_joke.html
+++ b/templates/add_joke.html
@@ -36,7 +36,7 @@
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
-                <button type="submit" class="btn-large light-blue darken-1 text-shadow">Submit A Joke</button>
+                <button type="submit" class="btn-large yellow darken-2 text-shadow">Submit A Joke</button>
             </div>
         </div>
     </form>
