--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,14 +21,6 @@ nav ul a{
     margin: 10px;
 }
 
-/*.bookmark {
-    margin: 15px;
-}
-
-.bookmark_edit {
-    margin: 0px;
-}*/
-
 #counter {
     margin: 0px 10px 0px;
 }
@@ -66,6 +58,10 @@ nav ul a{
         font-size: 10px;
     }
     
+    .btn {
+            font-size: 10px;
+        }
+
     #edit {
         padding: 0px;
     }
@@ -99,6 +95,10 @@ nav ul a{
     }
 
     #searchbox {
+        font-size: 10px;
+    }
+
+    .btn {
         font-size: 10px;
     }
 
@@ -163,6 +163,10 @@ nav ul a{
         font-size: 20px;
     }
     
+    .btn {
+        font-size: 14px;
+    }
+
     #edit-delete {
         margin-left: -30px;
     }
@@ -188,7 +192,7 @@ nav ul a{
 @media only screen and (min-width: 1020px) {
 
     .btn-small {
-        width: 100%;
+        width: auto;
     }
 
     #edit-delete {
