--- a/templates/edit_joke.html
+++ b/templates/edit_joke.html
@@ -45,10 +45,10 @@
         <div class="row">
             <div class="col s12 center-align">
                  <!-- cancel button -->
-                    <a href="{{ url_for('get_jokes') }}" class="btn-small red text-shadow">
-                        Cancel <i class="fas fa-times-circle right"></i>
+                    <a href="{{ url_for('get_jokes') }}" class="btn red text-shadow">
+                        Cancel
                     </a>
-                <button type="submit" class="btn-small yellow darken-1 text-shadow">Edit Joke</button>
+                <button type="submit" class="btn yellow darken-1 text-shadow">Edit Joke</button>
             </div>
         </div>
     </form>
