--- a/templates/food_jokes.html
+++ b/templates/food_jokes.html
@@ -4,15 +4,15 @@
     <div class="row card-panel amber lighten-5">
         <form action="{{ url_for('search') }}" method="POST" class="col s12">
             <div class="row valign-wrapper center-align">
-                <div class="input-field col s12 m8">
+                <div class="input-field col s12">
                     <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                    <label for="query">Search Jokes</label>
+                    <label for="query" id="searchbox">Search Jokes</label>
                 </div>
                 <div class="col s12 m4">
                     <a href="{{ url_for('get_jokes') }}" class="red btn text-shadow">Reset</a>
                     <button type="submit" class="yellow darken-3 btn text-shadow">
-                        <i class="fas fa-search left"></i> Search
+                         Search
                     </button>
                 </div>
             </div>
