--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
-                    <div class="row flashes">
+                    <div class="row flashes s12 m6 offset-3">
                         <h4 class="yellow lighten-3 center-align">{{ message }}</h4>
                     </div>
                 {% endfor %}
