--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
     <h3 class="center-align grey-text">Register</h3>
 
     <div class="row">
-        <form class="col s6 s6 offset-s3" method="POST" action="{{ url_for('register') }}">
+        <form class="col s12 m6 offset-m3" method="POST" action="{{ url_for('register') }}">
             <div class="card-panel">
                 <!-- username -->
                 <div class="row">
@@ -29,7 +29,7 @@
     </div>
 
     <div class="row">
-        <div class="col s6 s6 offset-s3">
+        <div class="col s6 offset-s3">
             <p class="center-align grey-text">Already Registered?
                 <a href="{{ url_for('login') }}" class="yellow-text text-darken-2">Log In</a>
             </p>
