--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,9 @@
             <div class="navbar-fixed">
                 <nav>
                     <div class="col s10 offsets-2 nav-wrapper white lighten-2">
-                        <a href="{{ url_for('get_jokes') }}" class="brand-logo center grey-text" id="hero-text">Laugh Out Loud!</a>
-                        <a href="#" data-target="mobile-demo" class="sidenav-trigger right grey-text "><i class="fas fa-bars"></i></a>
-                        <ul class="right hide-on-med-and-down">
+                        <a href="{{ url_for('get_jokes') }}" class="brand-logo center teal-text" id="hero-text">Laugh Out Loud!</a>
+                        <a href="#" data-target="mobile-demo" class="sidenav-trigger right teal-text"><i class="fas fa-bars"></i></a>
+                        <ul class="right hide-on-med-and-down teal-text">
                             <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
                             {% if session.user %}
                                 <li><a href="{{ url_for('coll_bookmarks', username=session['user']) }}">Collection</a></li>
@@ -65,7 +65,7 @@
             {% if messages %}
                 {% for message in messages %}
                     <div class="row flashes s12 m6 offset-3">
-                        <h4 class="yellow lighten-3 center-align">{{ message }}</h4>
+                        <h3 class="center-align">{{ message }}</h3>
                     </div>
                 {% endfor %}
             {% endif %}
