Added Materialize CSS to h3 tag

--- a/templates/coll_bookmarks.html
+++ b/templates/coll_bookmarks.html
@@ -12,17 +12,17 @@
                     <label for="query" id="searchbox">Search Jokes</label>
                 </div>
                 <div class="col s12">
-                    <a href="{{ url_for('get_jokes') }}" class="red btn text-shadow">
+                    <a href="{{ url_for('get_jokes') }}" class="search-btns red btn text-shadow">
                         Reset
                     </a>
-                    <button type="submit" class="yellow darken-3 btn text-shadow">
+                    <button type="submit" class="search-btns yellow darken-3 btn text-shadow">
                         Search
                     </button>
                 </div>
             </div>
         </form>
     </div>  
-    <div class="s9 grey-text text-darken-2 center-align">
+    <div class="s9 teal-text text-darken-2 center-align">
             <h3>{{ username }}'s Collection</h3>
         </div> 
     <div class="row section">
